--- a/assets/css/variable.css
+++ b/assets/css/variable.css
@@ -1,11 +1,11 @@
 :root {
     /* Neutral colors */
-    --neutral-900: #070E38;
+    --neutral-900: #091540;
     --neutral-800: #202535;
     --neutral-700: #333742;
-    --neutral-600: #555962;
+    --neutral-600: #535868;
     --neutral-300: #C7C7C7;
-    --neutral-200: #D5E4F7;
+    --neutral-200: #d6e2f5;
     --neutral-100: #eeeeee;
     --neutral-0:  #fbfdfe;
   
@@ -17,15 +17,19 @@
     --bg-block:var(--neutral-0);
     --bg-theme-switcher:var(--neutral-100);
     --bg-border-main:var(--neutral-200);
+    --bg-link:var(--neutral-0);
+    --bg-active:var(--red-700);
     --bg-border-chackbox:var(--neutral-900);
     
     --logo-cl:var(--red-700); 
     --bor-main:#D6E2F5;
+    --bor-tab:var(--neutral-200);
   
     /* txt */
     --txt-logo:var(--neutral-900);
     --txt-cl-main:var(--neutral-900);
     --txt-cl-title:var(--neutral-900);
+    --txt-active:var(--neutral-0);
     --txt-cl-textarea:var(var(--neutral-700));
     --txt-empty-point:var(--neutral-600);
       
@@ -41,15 +45,19 @@
     --bg-textarea:var(--neutral-800);  
     --bg-theme-switcher:var(--neutral-700);
     --bg-border-main:var(--neutral-600);
+    --bg-link:var(--neutral-700);
+    --bg-active:var(--red-400);
     --bg-border-chackbox:var(--neutral-200);
     --bg-progress:var(--neutral-800);
     
     --logo-cl:var(--red-400); 
+    --bor-tab:var(--neutral-600);
   
     /* txt */
     --txt-logo:#fff;
-    --txt-cl-main:var(--neutral-200);
-    --txt-cl-title:var(--neutral-100);
+    --txt-cl-main:var(--neutral-0);
+    --txt-cl-title:var(--neutral-0);
+    --txt-active:var(--neutral-900);
     --txt-cl-textarea:var(var(--neutral-200));
     --txt-empty-point:var(--neutral-200);
   
