--- a/assets/css/reuse.css
+++ b/assets/css/reuse.css
@@ -43,3 +43,16 @@
     line-height: 1.4;
     letter-spacing: -0.5px;
 }
+
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+  }
