--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,9 +6,8 @@
 html {
   background-image: var(--gradient-bg);
   overflow-y: hidden;
-  min-height:100vh;
-  min-height: 100svh;
-  height: 100%;
+    -webkit-overflow-scrolling: touch;
+  overscroll-behavior: none;
 }
 
 html:not(.dark) {
@@ -36,6 +35,7 @@ body {
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: none;
+  background-image: var(--gradient-bg);
 }
 
 .wrapper {
