--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,12 +30,14 @@ body {
   font-family: "Noto Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  height: 100svh;
+  min-height: 100vh;
+  min-height: 100svh;
+  height:100%;
   scrollbar-gutter: stable;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior: none;
-  background-image: var(--gradient-bg);
+  
 }
 
 .wrapper {
