--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,8 +30,8 @@ body {
   font-family: "Noto Sans", sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  min-height: 100vh;
-  min-height: 100svh;
+  height: 100vh;
+  
   
   scrollbar-gutter: stable;
   overflow-y: auto;
