Enhance HTML styling by adding background attachment and size properties

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,11 +5,14 @@
 
 html {
   background-image: var(--gradient-bg);
+  background-attachment: fixed;
+  background-size: cover;
   overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
   overscroll-behavior: none;
   min-height: 100vh;
   height: 100%;
+ 
 }
 
 html:not(.dark) {
