--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,6 +50,9 @@ body {
   max-width: 512px;
   height: 100%;
   margin: 0 auto;
+  background-image: var(--gradient-bg);
+  background-attachment: fixed;
+  background-size: cover;
   
 
   @media screen and (min-width: 512px) {
