--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,9 @@ body {
   background-image: var(--gradient-bg);
   background-attachment: fixed;
   background-size: cover;
+  height: calc(100% + env(safe-area-inset-top));
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
   
 
   @media screen and (min-width: 512px) {
