--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,9 @@ html {
   overscroll-behavior: none;
   min-height: 100vh;
   height: 100%;
+ height: calc(100% + env(safe-area-inset-top));
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
  
 }
 
