--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
 
 html {
   background-image: var(--gradient-bg);
-  background-attachment: fixed;
+  background-attachment: scroll;
    background-size: 100lvw 100lvh;
   -webkit-overflow-scrolling: touch;
   overflow-y: hidden;
