--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 @import "./typography.css";
 
 html {
+  position:relative;
   background-image: var(--gradient-bg);
   background-attachment: scroll;
    background-size: 100lvw 100lvh;
@@ -12,7 +13,14 @@ html {
   overscroll-behavior: none;
   min-height: 100lvh;
 
- 
+ &::after{
+content:'';
+position:fixed;
+width:100vw;
+height:100vh;
+background-image: var(--gradient-bg);
+background-size: 100lvw 100lvh;
+}
 }
 
 html:not(.dark) {
